[gd_scene load_steps=29 format=3 uid="uid://4n8ty1pm02d6"]

[ext_resource type="PackedScene" uid="uid://dyqhefvco675u" path="res://scenes/card_manager.tscn" id="1_dx02m"]
[ext_resource type="Script" uid="uid://ciwfghfmrg82b" path="res://scenes/boss_enemy.gd" id="1_fn5vf"]
[ext_resource type="Script" uid="uid://ba1wxnqstl0pf" path="res://scripts/card_resource.gd" id="2_m0dmf"]
[ext_resource type="Texture2D" uid="uid://bbjjjpfv8u4ro" path="res://myassets/player2-sheet.png" id="2_ry2ol"]
[ext_resource type="Texture2D" uid="uid://gqayll2t2u5w" path="res://myassets/enemy_thrusters.png" id="3_akdp1"]
[ext_resource type="Resource" uid="uid://c1qo0cin85qfg" path="res://cards/enemy_cards/spiral_pattern.tres" id="5_2l21p"]
[ext_resource type="Resource" uid="uid://6gpmndg0gaiu" path="res://cards/enemy_cards/fire_flower.tres" id="5_akpte"]
[ext_resource type="Resource" uid="uid://0y557biyv42o" path="res://cards/enemy_cards/crossfan.tres" id="5_ih7x0"]
[ext_resource type="Resource" uid="uid://d3mkil55pxo0b" path="res://cards/enemy_cards/wide_spread.tres" id="6_cidqm"]
[ext_resource type="Resource" uid="uid://cqq8l7pv50w5o" path="res://cards/enemy_cards/cannon.tres" id="6_xf61v"]
[ext_resource type="PackedScene" uid="uid://c53x0qer11f6q" path="res://scenes/pattern_manager.tscn" id="7_8kl1x"]
[ext_resource type="Resource" uid="uid://bvlrhww0eypnk" path="res://cards/enemy_cards/pentagon_spin.tres" id="7_m1y7j"]
[ext_resource type="Resource" uid="uid://c12icvrjo5ltc" path="res://cards/enemy_cards/spin.tres" id="7_wgby6"]
[ext_resource type="Resource" uid="uid://dch8uoean48h0" path="res://cards/enemy_cards/dashnburst.tres" id="8_ce4c2"]
[ext_resource type="AudioStream" uid="uid://c4cg88wq4xbyk" path="res://myassets/audio/Boss hit 1.wav" id="13_qvesf"]
[ext_resource type="Resource" uid="uid://yciwiebsdifc" path="res://cards/enemy_cards/big_bullet_spread.tres" id="13_xv36c"]
[ext_resource type="AudioStream" uid="uid://dw81h2oypefho" path="res://myassets/audio/Hit damage 1.wav" id="17_32j8p"]
[ext_resource type="AudioStream" uid="uid://dxtiqv7qsuw1t" path="res://myassets/audio/Retro Descending Short 20.wav" id="17_rk0jx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_njh6m"]
atlas = ExtResource("2_ry2ol")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jqjg"]
atlas = ExtResource("2_ry2ol")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_khdfj"]
animations = [{
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_njh6m")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_5jqjg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_hwpc6"]
atlas = ExtResource("3_akdp1")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdmc8"]
atlas = ExtResource("3_akdp1")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmfud"]
atlas = ExtResource("3_akdp1")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx8jl"]
atlas = ExtResource("3_akdp1")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnyg2"]
atlas = ExtResource("3_akdp1")
region = Rect2(256, 0, 64, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_h4pes"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwpc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdmc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmfud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx8jl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnyg2")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6wnxo"]

[node name="BossEnemy" type="CharacterBody2D"]
light_mask = 524288
visibility_layer = 524288
scale = Vector2(3.2, 3.2)
script = ExtResource("1_fn5vf")

[node name="Line2D" type="Line2D" parent="."]
width = 100.0
default_color = Color(0.631607, 0.0524005, 0.317752, 1)

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite2D" type="AnimatedSprite2D" parent="Sprites"]
sprite_frames = SubResource("SpriteFrames_khdfj")
autoplay = "default"

[node name="Thrusters" type="AnimatedSprite2D" parent="Sprites"]
position = Vector2(0, 8.4)
sprite_frames = SubResource("SpriteFrames_h4pes")
autoplay = "default"
frame_progress = 0.0529618

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 524288
visibility_layer = 524288
position = Vector2(0, 5.2)
scale = Vector2(2.66841, 1.96441)
shape = SubResource("CircleShape2D_6wnxo")

[node name="Area2D" type="Area2D" parent="."]

[node name="damagingbox" type="CollisionShape2D" parent="Area2D"]
light_mask = 524288
visibility_layer = 524288
position = Vector2(0, 5.2)
scale = Vector2(2.66841, 1.96441)
shape = SubResource("CircleShape2D_6wnxo")

[node name="ShootPoint" type="Marker2D" parent="."]
position = Vector2(0, -10.3334)

[node name="CardManager" parent="." instance=ExtResource("1_dx02m")]
deck_data = Array[ExtResource("2_m0dmf")]([ExtResource("8_ce4c2"), ExtResource("8_ce4c2"), ExtResource("8_ce4c2"), ExtResource("8_ce4c2"), ExtResource("8_ce4c2"), ExtResource("8_ce4c2"), ExtResource("13_xv36c"), ExtResource("13_xv36c"), ExtResource("13_xv36c"), ExtResource("5_2l21p"), ExtResource("5_2l21p"), ExtResource("5_2l21p"), ExtResource("5_2l21p"), ExtResource("6_cidqm"), ExtResource("6_cidqm"), ExtResource("6_cidqm"), ExtResource("6_cidqm"), ExtResource("6_xf61v"), ExtResource("6_xf61v"), ExtResource("6_xf61v"), ExtResource("6_xf61v"), ExtResource("6_xf61v"), ExtResource("5_ih7x0"), ExtResource("5_ih7x0"), ExtResource("5_ih7x0"), ExtResource("7_wgby6"), ExtResource("7_wgby6"), ExtResource("7_wgby6"), ExtResource("5_akpte"), ExtResource("5_akpte"), ExtResource("5_akpte"), ExtResource("7_m1y7j"), ExtResource("7_m1y7j"), ExtResource("8_ce4c2"), ExtResource("8_ce4c2"), ExtResource("8_ce4c2"), ExtResource("8_ce4c2"), ExtResource("8_ce4c2"), ExtResource("8_ce4c2")])

[node name="PatternManager" parent="." instance=ExtResource("7_8kl1x")]

[node name="CenterSpawnPoint" type="Marker2D" parent="."]

[node name="DamageBarTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="TakeHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_qvesf")
pitch_scale = 3.0

[node name="smash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_32j8p")
volume_db = 15.0
pitch_scale = 0.3

[node name="smash2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_rk0jx")
volume_db = -20.0

[connection signal="area_entered" from="Area2D" to="." method="_on_damagearea_entered"]
[connection signal="timeout" from="DamageBarTimer" to="." method="_on_damage_bar_timer_timeout"]
